--- a/rootfs/Dockerfile-chroot
+++ b/rootfs/Dockerfile-chroot
@@ -56,7 +56,7 @@ RUN dnf update -y \
      diffutils \
      util-linux \
   && ln -s /usr/local/nginx/sbin/nginx /sbin/nginx \
-  && adduser -u 1001 -s /sbin/nologin -U www-data \
+#  && adduser -u 1001 -s /sbin/nologin -U www-data \
   && chown -R www-data:www-data /usr/local/nginx
 
 COPY --from=chroot /chroot /chroot
