--- a/rootfs/Dockerfile-chroot
+++ b/rootfs/Dockerfile-chroot
@@ -19,11 +19,10 @@ FROM ${BASE_IMAGE} as chroot
 # This intermediary image will be used only to copy all the required files to the chroot
 # TODO: Simplify in a future to a single Dockerfile
 COPY chroot.sh /chroot.sh
-RUN apk update \
-  && apk upgrade \
+RUN dnf update -y \
   && /chroot.sh
 
-FROM alpine:3.16.2
+FROM openeuler/openeuler:22.03
 
 ARG TARGETARCH
 ARG VERSION
